# WuXingEngine

./: .gitignore  README.md  compileEngine.cmd  compileLibs.cmd  preCompile.cmd  run.cmd
3rdPartyLibrary/freetype/: CMakeLists.txt
3rdPartyLibrary/freetype/builds/cmake/: FindHarfBuzz.cmake
3rdPartyLibrary/glad/: CMakeLists.txt
application/: local.properties  settings.gradle
application/app/src/main/cpp/: CMakeLists.txt  gl_code.cpp  gles.h
application/app/src/main/java/com/android/gl2jni/: GL2JNIActivity.java
compileLibs/: CMakeLists.txt
engine/: CMakeLists.txt  engine.cpp  engine.h
preCompile/: CMakeLists.txt  preCompile.cpp
source/core/: buffer.h  define.h  esc.h  geometry.h  reflect.h
source/function/: ANDROIDgles.h  camera.h  file.h  input.h  physics.h  render.h  renderHardwareInterface.h  renderPass.h  renderPipeline.h  time.h  window.h
source/resource/cmake/: path.cmake
source/resource/configs/: usrCompiler.xml  usrDefault.xml  usrLib.xml  usrMirror.xml
source/resource/shaders/: phyWorld.frag  phyWorld.vert  phyWorld.vsh  text.vert
